--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ h1,h2, h3, h4{
    margin-left: 20px;
    font-size: 150%;
    font-weight: 600;
+   color:black;
+ }
+ .forme{
+   background-color: #24ffff;
  }
 
  
@@ -94,17 +98,22 @@ h1,h2, h3, h4{
   width: 100%;
   height: 100%;
 }
-.dangal{
-  background-color:#75d1ec;
+
+.services-white{
   border-radius:20px;
-  color: #fff;
-  
-} 
-.dangal-two{
-  background-color:white;
-  border-radius:20px ;
+  background-color:#fff;
   color:aqua;
+
 }
+.services-blue{
+  border-radius:20px;
+ 
+  background-color:#75d1ec;
+  color: #fff;
+
+}
+
+
 .icon{
   width: 20px;
   padding: 5px;
@@ -132,35 +141,52 @@ h1,h2, h3, h4{
 .icon-five{
      background-color:aqua; 
    border-radius:15px;
-  height: 60px;
-  width: 60px;
-  text-align: center;
+   height: 60px;
+  width: 60px; 
+  padding: 3px;
+   text-align: center;
   line-height: 60px;
   position: absolute;
   left: +5px;
-  top:8px ;
+  top:8px ; 
   
  
-}
+} 
 .icon-six{
    background-color:#fff;
    border:1px solid white;  
   border-radius:15px;
-  height: 60px;
-  width: 60px;
-  text-align: center;
+  height: 66px;
+  width: 66px; 
+  padding: 3px;
+  /* text-align: center;
   line-height: 60px;
   position: absolute;
   left: +5px;
-  top:8px ;
+  top:8px ; */
+}
+/* .icon-seven{
+  background-color:#fff;
+} */
+.icon-seven{
+  background-color:aqua;
+   border:1px solid white;  
+  border-radius:15px;
+  padding: 3px;
+  
+   height: 66px;
+    width: 66px; 
+ 
 }
 
 .icon-img{
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
 }
 .icon-text{
-  padding-left:70px;
+  /* padding-left:100px; */
+  
+  
   
 }
 
@@ -178,8 +204,8 @@ h1,h2, h3, h4{
 
 }
 .section-five{
-  background-image: url('../images/bgimage.png');
-  background-position: center;
+  background-image: url('../images/BackGroundImage (2).png');
+  background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
@@ -188,8 +214,17 @@ h1,h2, h3, h4{
   /*position:absolute;
   /*-webkit-filter: blur(2px); /* Safari 6.0 - 9.0 */
       /*filter: blur(2px); */
+      padding-top: 50px;
+      padding-bottom: 50px;
   
 }
+ .nose-img{
+  font-weight: 700;
+  
+} 
+/* .roases{
+  margin-bottom: 200px;
+} */
 /* i{
   background-color: #160335;
 } */
@@ -198,10 +233,12 @@ h1,h2, h3, h4{
   letter-spacing: 1px;
   font-size: 150%;
   font-weight: 700;
+  padding-left: 4px;
 }
 .large{
   font-size: 100%;
   font-weight: 500;
+  padding-left: 4px;
 }
 .button{
   border: 1px solid;
@@ -242,8 +279,8 @@ h1,h2, h3, h4{
 
 .footer{
   width: 100%;
-  background-color: #23415c;
-  padding: 5% 5% 10% 5%;
+  background-color: black;
+  /* padding: 5% 5% 10% 5%; */
   color: #fff;
   
 }
@@ -268,7 +305,7 @@ h1,h2, h3, h4{
   font-weight: bold;
 
 }
-.img1{
+ .img1{
   background-color:rgba(0, 255, 255, 1.5); 
   margin-top: 25px;
   border-radius: 5%;
@@ -309,17 +346,22 @@ h1,h2, h3, h4{
         .card-text {
             color: black;
             font-weight: bold;
+            margin-bottom: 0px;
+            margin-top: 20px;
 
         }
 
          .btn.btn {
             color: white;
             background-color: #00d6d6;
+            
 
         } 
 
         .card-title {
             color: #00d6d6;
+            margin-top: 20px;
+            font-size: 50px;
         }
 
     
@@ -329,11 +371,25 @@ h1,h2, h3, h4{
             width:500px; */
             width: 100%;
             height: 100%;
-            background-color: rgba(255, 255, 255, .2);
+            background-color: rgba(255, 255, 255, .1);
+            height: 300px;
+            width: 500px;
             
         }
         .card-overlay{
            margin-right: 20px;
+        }
+        .footer-imag{
+          background-color: #24ffff;
+          border-radius: 5%;
+        }
+        .form-bg{
+          background-color:lightskyblue;
+        }
+        .last-part {
+          background-color:#75d1ec;
+          font-size: 200;
+          font-weight: bold;
         }
 
 
@@ -345,10 +401,13 @@ h1,h2, h3, h4{
 }
 .down-card {
   
-  margin-top: 10px;
+  margin-top: 20px;
   
 }
 li{
   margin-left: 0px;
+}
+.third-row{
+  margin-top: 10px;
 }
         }
